# zundamahjong

./: .env.example  .gitignore  .justfile  LICENSE  README.md  debug_server.py  flake.nix  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-client.yml  build-server.yml  build.yml  client-build.yml  client.yml  python-wheel.yml  release.yml  server.yml
alembic/: README.md  create.py  env.py
alembic/versions/: 9e41b71ccd79_add_avatar_column.py  de86afdc90c1_amehare_hau.py
client/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/login/: index.html
client/src/: app.css  app.tsx  base.css  fonts.css  login.css  login.tsx  main.tsx  process_info.ts  shanten.ts
client/src/assets/mahjongtiles/: LICENSE
client/src/components/: name_form.css  name_form.tsx
client/src/components/audio_collection/: audio_collection.tsx
client/src/components/avatar_selector/: avatar_selector.tsx
client/src/components/create_room_form/: create_room_form.css  create_room_form.tsx
client/src/components/emitter/: emitter.tsx
client/src/components/error_list/: error_list.css  error_list.tsx
client/src/components/game/action_disambig_menu/: action_disambig_menu.css  (+1 more)
client/src/components/game_options_context/: game_options_context.tsx
client/src/components/game_options_form/: game_options_form.css  game_options_form.tsx
client/src/components/join_room_form/: join_room_form.css  join_room_form.tsx
client/src/components/loading_screen/: loading_screen.css  loading_screen.tsx
client/src/components/name_form/: name_form.css  name_form.tsx
client/src/components/options_context/: options_context.tsx
client/src/components/room/: input_props.ts
client/src/components/room_info/: room_info.tsx
client/src/components/server_message_list/: server_message_list.css  server_message_list.tsx
client/src/components/user_settings_form/: user_settings_form.css  user_settings_form.tsx
client/src/components/user_welcome/: user_welcome.css  user_welcome.tsx
client/src/types/: action.ts  audio.ts  avatars.ts  call.ts  client_options.ts  emit_func.ts  error_message.ts  game.ts  game_options.ts  game_options_presets.ts  pattern.ts  player.ts  room.ts  server_message.ts  tile.ts
client/test/: shanten.test.ts  tenpai.test.ts
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: database.rst  index.rst  mahjong.pattern.rst  mahjong.rst  server.rst  types.rst
src/: client  main.py
src/database/: __init__.py  engine.py  security.py
src/mahjong/: __init__.py  action.py  action_selector.py  call.py  deck.py  discard_pool.py  form_hand.py  game.py  game_options.py  hand.py  meld.py  round.py  scoring.py  shanten.py  suit_shanten.py  tile.py  win.py  win_info.py  yaku.py
src/server/: __init__.py  flask.py  game_controller.py  game_room.py  logger.py  main.py  name_sid.py  player_info.py  sio.py  socketio.py
src/server/static/: actions.css  discard_pool.css  hand.css  index.html  mahjong.js  player_calls.css  round_info.js  seat_calls.css  straight_view.css  style.css  table.css  table.js  table_view.css
src/server/static/js/: actions.js  mahjong.js  main.js  round_info.js  table.js  win_info.js
src/server/static/style/: discard_pool.css  hand.css  player_calls.css  seat_calls.css  straight_view.css  table.css  table_center_info.css  win_info.css
src/zundamahjong/: __main__.py  cli.py  client
src/zundamahjong/database/: __init__.py  avatars.py  engine.py  models.py  security.py  users.py
src/zundamahjong/mahjong/: action.py  action_selector.py  call.py  deck.py  discard_pool.py  exceptions.py  form_hand.py  game.py  game_options.py  hand.py  meld.py  pattern.py  round.py  scoring.py  shanten.py  tile.py  win.py  yaku.py
src/zundamahjong/mahjong/pattern/: __init__.py  flower.py  flush.py  honours.py  melds.py  no_calls.py  pairs.py  pattern.py  pattern_calculator.py  pinfu.py  sequences.py  sets.py  special_win.py  terminals.py  wait.py  wait_pattern.py  yakuhai.py
src/zundamahjong/server/: __init__.py  flask.py  game_controller.py  game_room.py  logger.py  main.py  name_sid.py  player_info.py  player_store.py  sio.py
src/zundamahjong/templates/: __init__.py  base.html  index.html  login.html  manifest.py
src/zundamahjong/types/: avatar.py  player.py
static/: index.html
static/js/: actions.js  animations.js  hand.js  mahjong.js  main.js  room.js  round_info.js  screen.js  table.js  tile_data.js  win_info.js
static/style/: animations.css  discard_pool.css  flowers.css  hand.css  player_names.css  results.css  room.css  style.css  table.css  table_center_info.css  table_hand.css  win_info.css
tests/: action_selector_test.py  allowed_action.py  allowed_action_test.py  decks.py  decks_test.py  form_hand_test.py  furiten_test.py  game.py  game_test.py  riichi_test.py  round_test.py  round_waits_test.py  scoring_test.py  shanten_test.py  tenpai_test.py  test_deck.py  three_player_test.py  win.py  win_test.py  yaku_test.py  yakuman_test.py
tests/pattern/: flower_test.py  flush_test.py  get_pattern_mults.py  honours_test.py  melds_test.py  no_calls_test.py  pairs_test.py  pinfu_test.py  sequences_test.py  sets_test.py  special_win_test.py  terminals_test.py  wait_test.py  yaku_test.py  yakuhai_test.py  yakuman_test.py
tests/server/: conftest.py  sio_test.py
(+76 files in other folders)
